# paint

./: .gitignore  .gitmodules  CMakeLists.txt  Curva.h  Linea.h  Paint.dev  Paint.layout  Punto.h  README.md  main.cpp
src/: Application.h  main.cpp
